# Bolt

./: .gitignore  Cargo.toml  README.md  com.kylobytes.Bolt.json  flake.nix  meson.build  meson_options.txt  rustfmt.toml  shell.nix
bolt_core/: Cargo.toml
bolt_core/data/migration/: Cargo.toml
bolt_core/data/migration/src/: lib.rs  m20240223_123539_create_shows_table.rs  m20240223_123546_create_episodes_table.rs
bolt_core/src/: database.rs  lib.rs  migrate.rs
bolt_core/src/episode/: mod.rs  repository.rs
bolt_core/src/show/: mod.rs  repository.rs
bolt_entity/: Cargo.toml  episode.rs  mod.rs  prelude.rs  show.rs
bolt_entity/src/: episode.rs  lib.rs  podcast.rs  prelude.rs  show.rs
bolt_gtk/: Cargo.toml  flake.nix  meson.build
bolt_gtk/src/: bolt.gresource.xml  main.rs  meson.build  setup.rs  storage.rs  utils.rs  window.rs
bolt_gtk/src/api/: authentication.rs  episodes.rs  mod.rs  podcasts.rs
bolt_gtk/src/api/search/: result.rs
bolt_gtk/src/data/: database.rs  mod.rs
bolt_gtk/src/data/episode/: mod.rs  model.rs  object.rs  repository.rs
bolt_gtk/src/data/podcast/: mod.rs  object.rs  repository.rs
bolt_gtk/src/data/show/: mod.rs  model.rs  object.rs  repository.rs
bolt_gtk/src/discover/: card.rs  mod.rs  view.rs
bolt_gtk/src/empty/: view.rs
bolt_gtk/src/episodes/: mod.rs  repository.rs  row.rs  view.rs
bolt_gtk/src/explore/: card.rs  card_data.rs  mod.rs  preview.rs  view.rs
bolt_gtk/src/feed/: download.rs  mod.rs
bolt_gtk/src/gtk/: help-overlay.blp  help-overlay.ui  style.css  window.blp  window.ui
bolt_gtk/src/gtk/empty/: view.blp
bolt_gtk/src/gtk/episodes/: view.ui
bolt_gtk/src/gtk/explore/: card.blp  card.ui  preview.ui  view.blp
bolt_gtk/src/gtk/show-details/: episode-row.blp  view.ui
bolt_gtk/src/show_details/: episode_row.rs  mod.rs  view.rs
bolt_migration/: Cargo.toml
bolt_migration/src/: lib.rs  m20240223_123539_create_podcasts_table.rs  m20240223_123539_create_shows_table.rs  m20240223_123546_create_episodes_table.rs  main.rs
build-aux/: com.kylobytes.Bolt.Devel.json
data/: com.kylobytes.Bolt.desktop.in  com.kylobytes.Bolt.desktop.in.in  com.kylobytes.Bolt.gschema.xml  com.kylobytes.Bolt.gschema.xml.in  com.kylobytes.Bolt.metainfo.xml.in.in  meson.build
data/icons/: meson.build
data/migrations/: 000_create_podcasts_table.sql  001_create_episodes_table.sql  01_create_episodes_table.sql  01_create_shows_table.sql  02_create_episodes_table.sql  03_create_queue_table.sql  03_create_subscriptions_table.sql
data/resources/: resources.gresource.xml
gtk/: meson.build
gtk/data/: com.kylobytes.Bolt.appdata.xml.in
gtk/data/migrations/: 01_create_shows_table.sql
gtk/src/: config.rs  utils.rs
gtk/src/api/: mod.rs
gtk/src/api/search/: mod.rs
gtk/src/data/episode/: model.rs
gtk/src/discover/: mod.rs
gtk/src/empty/: view.rs
gtk/src/episodes/: repository.rs  view.rs
gtk/src/gtk/episodes/: row.blp
legacy/: com.kylobytes.Bolt.json
legacy/src/: window.rs
legacy/src/data/episode/: model.rs
legacy/src/data/show/: mod.rs  model.rs
legacy/src/episodes/: row.rs
legacy/src/gtk/discover/: view.blp
legacy/src/gtk/empty/: view.blp
legacy/src/podcasts/: repository.rs
legacy/src/show_details/: episode_row.rs  view.rs
po/: POTFILES  POTFILES.in  meson.build
src/: app.rs  application.rs  bolt.gresource.xml  config.rs  config.rs.in  discover_episode.rs  discover_view.rs  empty_view.rs  main.rs  meson.build  podcasts_view_stack.rs  queue_view.rs  setup.rs  storage.rs  utils.rs  window.rs  window.ui
src/api/: connection.rs  episode.rs  episode_client.rs  episodes.rs  mod.rs  podcasts.rs  recent_episodes.rs
src/api/episode/: episode_client.rs  episode_response.rs  episodes_response.rs  mod.rs  response.rs
src/api/podcast/: mod.rs  response.rs
src/api/search/: response.rs  result.rs  results.rs
src/api/show/: response.rs
src/api/shows/: response.rs
src/data/: database.rs  mod.rs
src/data/episode/: episode_data.rs  episode_model.rs  mod.rs  model.rs  object.rs
src/data/model/: episode.rs  mod.rs  show.rs
src/data/podcast/: mod.rs  provider.rs  repository.rs
src/data/queue/: mod.rs
src/data/remote/: api.rs  episode.rs  mod.rs  recent_episodes.rs
src/data/repository/: mod.rs  search_repository.rs  show_repository.rs
src/data/show/: mod.rs  model.rs  show_data.rs  show_model.rs
src/discover/: card.rs  discover_episode.rs  discover_repository.rs  discover_view.rs  episode_card.rs  mod.rs  repository.rs  search_result.rs  show.rs  view.rs
src/empty/: view.rs
src/episodes/: mod.rs  repository.rs  row.rs  view.rs
src/explore/: card.rs  preview.rs  view.rs
src/feed/: mod.rs
src/gtk/: discover-card.blp  discover-episode.blp  discover-view.blp  discover-view.ui  empty-view.blp  empty-view.ui  episode-card.blp  podcasts-view-stack.blp  podcasts-view-stack.ui  queue-view.blp  queue-view.ui  style.css  window.blp  window.ui
src/gtk/discover/: card.blp  view.blp
src/gtk/empty/: view.ui
src/gtk/episodes/: row.blp  row.ui  view.blp  view.ui
src/gtk/explore/: preview.ui  view.ui
src/gtk/show-details/: episode-row.blp  episode-row.ui  view.blp  view.ui
src/modals/: about.rs  mod.rs
src/podcasts/: repository.rs
src/show_details/: episode_row.rs  mod.rs  repository.rs  view.rs
