[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "2.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
once_cell = "1.19"
reqwest = { version = "0.12", features = [ "json" ]}
rss = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha1 = "0.10"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
time = { version = "0.3", features = [ "formatting", "macros", "parsing" ] }
tokio = { version = "1", features = [ "rt-multi-thread" ] }


[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
