[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = [ "full" ] }

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [ "wayland", "tokio" ]
