[package]
name = "bolt_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
reqwest = { version = "0.11", features = [ "macros", "serde_json" ] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.36"}