[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
bolt_entity = { path = "../bolt_entity" }
bolt_migration = { path = "../bolt_migration" }

async-channel = "2.1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4" }
once_cell = "1.19"
reqwest = { version = "0.11", features = [ "json" ] }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-native-tls" ]}
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha1 = "0.10"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.36", features = ["full"] }
rss = "2.0"

[dependencies.adw]
package = "libadwaita"
version = "0.5"
features = ["v1_4"]
