[package]
name = "bolt_migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "bolt_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite"
]
